[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/Actors/PNG/Default size/tanks_tankTracks2.png" type="Texture" id=2]
[ext_resource path="res://assets/Actors/PNG/Default size/tanks_tankGrey_body3.png" type="Texture" id=3]
[ext_resource path="res://assets/Actors/PNG/Default size/tanks_turret1.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34, 32 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 624, 368 )
collision_mask = 13
script = ExtResource( 1 )
speed = 100.0
WALKING_DIRECTION = -1

[node name="Muzzle" type="Sprite" parent="."]
position = Vector2( -16, -40 )
texture = ExtResource( 4 )
offset = Vector2( -16, 0 )
flip_h = true

[node name="MuzzleFirePosition" type="Position2D" parent="Muzzle"]
position = Vector2( -21, 0 )

[node name="Tracks" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Turret" type="Sprite" parent="."]
position = Vector2( 0, -24 )
texture = ExtResource( 3 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
modulate = Color( 0.364706, 0, 0.341176, 1 )
position = Vector2( 0, -16 )
shape = SubResource( 2 )

[node name="Raycasting" type="Node2D" parent="."]

[node name="WallLeft" type="RayCast2D" parent="Raycasting"]
self_modulate = Color( 0.0117647, 0.109804, 0.909804, 1 )
position = Vector2( 0, -8 )
z_index = 2
enabled = true
cast_to = Vector2( -100, 0 )
collision_mask = 128

[node name="WallRight" type="RayCast2D" parent="Raycasting"]
self_modulate = Color( 0.294118, 1, 0.0392157, 1 )
position = Vector2( 0, -8 )
z_index = 2
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 128

[node name="FiringTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
